<resources>
    <string name="app_name">Notes_TaskApp</string>
    <string name="notes_list">Notes</string>
    <string name="task_list">Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="Description">Description</string>
    <string name="pick_date">Pick Date</string>
    <string name="click">Press Here</string>
    <string name="pick_time">Pick Time</string>
    <string name="enter_task">Enter Task Here</string>
    <string name="save_task">Save Task</string>
    <string name="add_task">Add Task</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="tv_description">Description</string>
    <string name="tv_title">Title</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="delete_msg">delete?</string>
    <string name="yes">Confirm</string>
    <string name="no">No</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="Delete">Delete</string>
    <string name="selected_date">Selected Date</string>
    <string name="selected_time">Selected Time</string>
    <string name="completed">Completed</string>
    <string name="conform_complete">Confirm Complete</string>
</resources>