<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".Add_Notes_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitle"
        android:hint="@string/title"
        android:textColorHint="@color/black"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDescription"
        android:hint="@string/Description"
        android:textColorHint="@color/black"
        android:lines="5"
        android:maxLines="5"
        android:padding="20dp"
        android:gravity="top"
        android:layout_marginTop="20dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPickDateText"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pick_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPickDate"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableStart="@drawable/baseline_date_24"
            android:text="@string/click"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPickTimeText"
            android:text="@string/pick_time"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPickTime"
            android:drawableStart="@drawable/baseline_more_time_24"
            android:text="@string/click"
            android:gravity="center"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/btnAdd"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

</LinearLayout>