<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginHorizontal="30dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:id="@+id/tvTitle"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:paddingStart="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_description"
        android:id="@+id/tvDescription"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:paddingStart="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSelectedDateText"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/selected_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDateSelected1"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableStart="@drawable/baseline_date_24"
            android:text="@string/selected_date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSelectedTimeText"
            android:text="@string/selected_time"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTimeSelected1"
            android:drawableStart="@drawable/baseline_more_time_24"
            android:text="@string/selected_time"
            android:gravity="center"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_text"
            android:id="@+id/btnDelete"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="15sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_text"
            android:id="@+id/btnEdit"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>