<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:layout_marginTop="30dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_layout_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_task"
        android:drawableStart="@drawable/baseline_add_task_24"
        android:textSize="20sp"
        android:textColorHint="@color/black"
        android:paddingTop="10dp"
        android:paddingStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:id="@+id/btnCompleteTask"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="15sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_text"
            android:id="@+id/btnEditTask"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="15sp"/>

    </LinearLayout>


</LinearLayout>